unpackaged/main/default/objects/Tarification__c/Tarification__c.object-meta.xml
<CustomObject>
    <label>Tarification</label>
    <nameField>
        <displayFormat>TAR-{00000}</displayFormat>
        <label>Numéro de Tarification Loyer</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tarifications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>