unpackaged/main/default/objects/Tarification__c/fields/Devis__c.field-meta.xml
<CustomField>
    <fullName>Devis__c</fullName>
    <label>Devis</label>
    <referenceTo>Quote</referenceTo>
    <relationshipLabel>Tarifications</relationshipLabel>
    <relationshipName>Tarifications</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>