unpackaged/main/default/objects/Tarification__c/fields/Duree__c.field-meta.xml
<CustomField>
    <fullName>Duree__c</fullName>
    <label>Durée</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>