unpackaged/main/default/objects/Tarification__c/fields/Kilometrage__c.field-meta.xml
<CustomField>
    <fullName>Kilometrage__c</fullName>
    <label>Kilométrage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>