unpackaged/main/default/objects/Tarification__c/fields/Loyer__c.field-meta.xml
<CustomField>
    <fullName>Loyer__c</fullName>
    <formula>IF (
OR
(
ISNULL(Devis__r.Prix_0_kms__c)
,
ISNULL(Devis__r.Prix_des_kms_inclus_les_100_kms__c)
,
ISNULL(RYF__c)
)
,
Tarif__c
,

(Devis__r.Prix_0_kms__c + ( Kilometrage__c / 100 *  Devis__r.Prix_des_kms_inclus_les_100_kms__c ))*(1+  RYF__c)
)</formula>
    <label>Loyer</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>