unpackaged/main/default/objects/Tarification__c/fields/RYF__c.field-meta.xml
<CustomField>
    <fullName>RYF__c</fullName>
    <label>RYF (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>