unpackaged/main/default/objects/Tarification__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Duree__c</columns>
    <columns>Kilometrage__c</columns>
    <columns>Loyer__c</columns>
    <columns>Flow_Display__c</columns>
    <columns>RYF__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Loyer__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Tout</label>
</ListView>