unpackaged/main/default/objects/Tarification__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>Devis__c</columns>
    <columns>Flow_Display__c</columns>
    <columns>CURRENCY_ISO_CODE</columns>
    <filterScope>Everything</filterScope>
    <label>Tout</label>
</ListView>